--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,8 @@ python-jose==3.3.0
 slowapi==0.1.8
 gunicorn==21.2.0
 pyyaml==6.0.1
-psutil==5.9.5 
+psutil==5.9.5
+ffmpeg-python==0.2.0
+torch==2.1.0
+torchvision==0.16.0
+ultralytics==8.0.227 
