--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -38,5 +39,22 @@ logs/
 # Project specific
 recordings/
 temp/
-config.yml
-.env 
+config.yaml
+.env
+cpu_monitor_*.json
+
+# Model files
+*.pt
+*.pth
+*.onnx
+
+# Media files
+*.mp4
+*.avi
+*.mkv
+*.jpg
+*.jpeg
+*.png
+
+# Project specific
+config.yml 
