new and updated fixed

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,14 +1,14 @@
 [pytest]
-markers =
-    stress: marks tests as stress tests (deselected by default)
-    asyncio: marks tests as async tests
-filterwarnings =
-    ignore::DeprecationWarning:vidgear.*
 asyncio_mode = auto
 testpaths = tests
 python_files = test_*.py
-addopts =
-    --tb=short
-    --durations=10
-    --maxfail=3
-    -v 
+addopts = -v --tb=short
+
+# Markers
+markers =
+    asyncio: mark test as async
+
+# Warning filters
+filterwarnings =
+    ignore::DeprecationWarning:vidgear.*
+    ignore::DeprecationWarning:pytest_asyncio.* 
